deploy/overlays/enterprise/istio-injection-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar
  namespace: modelgovernor
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: modelgovernor
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reconciler
  namespace: modelgovernor
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
